Add legend to the graph. This legend should be reskin during the view integration.

--- a/flare.css
+++ b/flare.css
@@ -69,3 +69,10 @@ ol.radio > li {
 #radio-ar-all {
   width: 20%;
 }
+
+/* Legend */
+.legend-color {
+  display: inline-block;
+  height: 20px;
+  width: 20px;
+}
