--- a/flare.css
+++ b/flare.css
@@ -1,7 +1,7 @@
 @import url(../style.css?aea6f0a);
 
 #chart {
-  width: 960px;
+  width: 80%;
   height: 500px;
   background: #ddd;
   margin: 0;
@@ -17,8 +17,8 @@ text {
 }
 
 rect {
-  /* fill: none; */
   stroke: #fff;
+  stroke-width: 2px;
 }
 
 rect.parent,
